--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,6 @@ border: 2px solid rgb(0, 0, 0);
 }
 /*Tablets/ Ipads */
 @media (min-width: 768px) and (max-width: 960px) {
-@media screen and (min-width: 768px){
 
   
   #container {
@@ -173,29 +172,31 @@ border: 2px solid rgb(0, 0, 0);
     margin-bottom: 75px;
   }
 }
+
 /*Smartphones*/
-@media (min-width: 100px) and (max-width: 768px) {
+@media (min-width: 100px) and (max-width: 767px) {
 
   #container {
   margin-top: 20px;
-  grid-template-columns:2fr;
-  grid-template-rows: 210px 210px 210px 210px 210px 210px 210px 210px 210px 210px;
+  row-gap: 1%;
+  column-gap: 0px;
+  grid-template-columns: 1fr;
+  grid-template-rows: 210px 210px 210px 210px 210px 210px;
     grid-template-areas:
-      "header header"
-      "box1 box1"
-      "box2 box2"
-      "box3 box3 "
-      "content2 content2 "
-      "sidebar sidebar"
-      "innerboard innerboard"
+      "header"
+      "box1"
+      "box2"
+      "box3"
+      "content2"
+      "sidebar"
   
       ;
   }
   .innerboard{
     grid-gap: 0px;
     grid-column: 1/13;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 210px 210px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 210px 210px 210px 210px;
     height: fit-content;
     width: auto;
     margin-bottom: 75px;
