--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,8 @@ background-size: 90%;
   display: grid;
   gap: 23px;
   margin-top: 20px;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 210px 210px 210px 210px;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(4, 210px);
   margin-bottom: 40px;
 
 }
@@ -32,7 +32,7 @@ background-size: 90%;
 
   border: 2px solid rgb(0, 0, 0);
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 1fr;
   grid-gap: 13px;
   grid-column: 1/13;
@@ -53,6 +53,8 @@ background-size: 90%;
 .header, .box1, .box2 , .box3, .content2, .sidebar, .footer-s1, .footer-s2, 
 .footer-s3, .footer-s4{
 border: 2px solid rgb(0, 0, 0);
+overflow: hidden;
+
 
 }
 
@@ -62,12 +64,12 @@ border: 2px solid rgb(0, 0, 0);
   .header{
         
       grid-area: header;
-      overflow: hidden;
+      
 
     }
   .box1{
       grid-area:box1;
-      overflow: hidden;  
+     
       
       
   
@@ -75,7 +77,7 @@ border: 2px solid rgb(0, 0, 0);
   .box2{
       
     grid-area: box2;
-    overflow: hidden;  
+    
     
 
 
@@ -83,45 +85,45 @@ border: 2px solid rgb(0, 0, 0);
   .box3{
     
     grid-area:box3;
-    overflow: hidden;
+   
   
 }
   .content2{
      
       grid-area:content2;
-      overflow: hidden;
+      
 }
 
   .sidebar{
     
       grid-area:sidebar;
-      overflow: hidden;
+      
     }
 
 
   .footer-s1{
       
       grid-area:footer-s1;
-      overflow: hidden;
+      
     
     }
   .footer-s2{
       
       grid-area:footer-s2;
-      overflow: hidden;
+      
     }
 
   .footer-s3{
       
       grid-area:footer-s3;
-      overflow: hidden;
+      
     }
 
 
   .footer-s4{
       
       grid-area:footer-s4;
-      overflow: hidden;
+     
     }
 
 
@@ -173,8 +175,8 @@ border: 2px solid rgb(0, 0, 0);
   #container {
     gap: 15px;
     margin-top: 20px;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 210px 210px 210px 210px 210px;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(4, 210px);
     grid-template-areas:
       "header header header header header header header header header header header header"
       "box1 box1 box1 box1 box2 box2 box2 box2 box3 box3 box3 box3"
@@ -186,8 +188,8 @@ border: 2px solid rgb(0, 0, 0);
   .innerboard{
     grid-gap: 0px;
     grid-column: 1/13;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 210px 210px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2,210px);
     height: fit-content;
     width: auto;
     margin-bottom: 75px;
@@ -195,7 +197,7 @@ border: 2px solid rgb(0, 0, 0);
 }
 
 /*Smartphones*/
-@media (min-width: 100px) and (max-width: 768px) {
+@media screen and (max-width: 768px) {
 
   #container {
   margin-top: 20px;
@@ -204,7 +206,7 @@ border: 2px solid rgb(0, 0, 0);
   row-gap: 1%;
   column-gap: 0px;
   grid-template-columns: 1fr;
-  grid-template-rows: 210px 210px 210px 210px 210px 210px;
+  grid-template-rows: repeat(6, 210px );
     grid-template-areas:
       "header"
       "box1"
@@ -219,7 +221,7 @@ border: 2px solid rgb(0, 0, 0);
     grid-gap: 0px;
     grid-column: 1/13;
     grid-template-columns: 1fr;
-    grid-template-rows: 210px 210px 210px 210px;
+    grid-template-rows: repeat(4,210px);
     height: fit-content;
     width: auto;
     margin-bottom: 75px;
